# scene_project

./: .gitignore  .gitmodules  CMakeLists.txt  Possible_points.html  Possible_points.md  gltf_loader.cpp  gltf_loader.hpp  main.cpp  msdf_loader.cpp  msdf_loader.h  shaders.cpp  shaders.h
cmake/modules/: FindSDL2.cmake
models/padoru/: README.txt  padoru_OT_v2.0.fbx  padoru_OT_v2.0_sack.fbx
models/padoru2/: Padoru_v1-4OBJ.rar
models/padoru_santa_saber_alter/: license.txt  scene.gltf
models/padoru_with_lod/: scene.gltf
models/sparrow_-_quirky_series/: scene.gltf
